fix searchbar search icon on mobile

--- a/main.css
+++ b/main.css
@@ -313,8 +313,3 @@ hr {
         display: block !important;
     }
 }
-@media (max-width: 400px) {
-    #searchBar img {
-        left: 50px;
-    }
-}
